tests/errors/typedef.HC
//ERR: no 'typedef' in HolyC
typedef I64 T;
"hi\n";
